@startuml
title DER - CONSTRUMOB MVP

hide circle
skinparam linetype ortho

entity CLIENTE {
  id : BIGINT PK
  nome : VARCHAR(120)
  email : VARCHAR(160) UNIQUE
  telefone : VARCHAR(20)
}

entity PROFISSIONAL {
  id : BIGINT PK
  nome : VARCHAR(120)
  email : VARCHAR(160) UNIQUE
  telefone : VARCHAR(20)
  especialidade : VARCHAR(100)
  validado : BOOLEAN
}

entity SERVICO {
  codigo : BIGINT PK
  nome : VARCHAR(120)
  categoria : VARCHAR(80)
  preco : DECIMAL(12,2)
  ativo : BOOLEAN
}

entity PEDIDO_SERVICO {
  numero : BIGINT PK
  data : DATETIME
  status : VARCHAR(20)
  cliente_id : BIGINT FK
  profissional_id : BIGINT FK NULL
  localidade : VARCHAR(160)
  descricao : VARCHAR(500)
}

entity ITEM_SERVICO {
  id : BIGINT PK
  pedido_id : BIGINT FK
  servico_id : BIGINT FK
  quantidade : INT
  preco_unitario : DECIMAL(12,2)
}

entity AVALIACAO {
  id : BIGINT PK
  pedido_id : BIGINT FK UNIQUE
  nota : INT 1..5
  comentario : VARCHAR(500) NULL
  data : DATETIME
}

CLIENTE ||--o{ PEDIDO_SERVICO : publica
PROFISSIONAL o|--o{ PEDIDO_SERVICO : aceita
PEDIDO_SERVICO ||--|{ ITEM_SERVICO : possui
SERVICO ||--o{ ITEM_SERVICO : referencia
PEDIDO_SERVICO ||--o| AVALIACAO : resulta

@enduml
